# aarambh-ai

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SELF_LEARNING.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/release-notes/: v1.0.0.md
.github/workflows/: ci.yml  release.yml
aarambh-ai/: Cargo.toml
aarambh-ai/src/: main.rs
aarambh-ai/src/cmd/: convert.rs  finetune.rs  infer.rs  mod.rs  quantise.rs  selflearn.rs  train.rs
aarambh-ai/src/ui/: mod.rs  predict_view.rs
configs/: tiny_shakespeare.toml  tiny_shakespeare_smoke.toml  wikitext103_cuda_smoke.toml  wikitext103_large.toml  wikitext103_medium.toml  wikitext103_small.toml  wikitext103_tiny.toml
crates/aarambh-ai-core/: Cargo.toml
crates/aarambh-ai-core/src/: config.rs  device.rs  dtype.rs  error.rs  lib.rs  traits.rs
crates/aarambh-ai-core/tests/: core_tests.rs
crates/aarambh-ai-data/: Cargo.toml
crates/aarambh-ai-data/src/: dataset.rs  lib.rs  loader.rs  preprocess.rs
crates/aarambh-ai-finetune/: Cargo.toml
crates/aarambh-ai-finetune/src/: adapter.rs  grpo.rs  lib.rs  lora.rs  model.rs  sft.rs  trainer.rs  verifier.rs
crates/aarambh-ai-inference/: Cargo.toml
crates/aarambh-ai-inference/src/: engine.rs  kvcache.rs  lib.rs  sampler.rs  stream.rs  thinking.rs
crates/aarambh-ai-kernel/: Cargo.toml  build.rs
crates/aarambh-ai-kernel/benches/: kernel_bench.rs
crates/aarambh-ai-kernel/kernels/: flash_attention.cu  flash_attn_bwd.cu  rms_norm_fused.cu  rope_apply.cu  swiglu_fused.cu
crates/aarambh-ai-kernel/src/: dispatch.rs  flash_attn.rs  fused_ffn.rs  fused_norm.rs  fused_rope.rs  lib.rs
crates/aarambh-ai-kernel/src/cpu/: mod.rs  parallel_attn.rs  simd_norm.rs
crates/aarambh-ai-kernel/tests/: kernel_tests.rs
crates/aarambh-ai-model/: Cargo.toml
crates/aarambh-ai-model/src/: embedding.rs  head.rs  lib.rs  model.rs
crates/aarambh-ai-model/tests/: model_tests.rs
crates/aarambh-ai-nn/: Cargo.toml
crates/aarambh-ai-nn/src/: attention.rs  block.rs  ffn.rs  kvcache.rs  lib.rs  norm.rs  rope.rs
crates/aarambh-ai-nn/tests/: nn_tests.rs
crates/aarambh-ai-quant/: Cargo.toml
crates/aarambh-ai-quant/src/: absmax.rs  awq.rs  calibrate.rs  dequant.rs  gguf_quant.rs  gptq.rs  int4.rs  kv_quant.rs  lib.rs  qat.rs  types.rs
crates/aarambh-ai-safety/: Cargo.toml
crates/aarambh-ai-safety/src/: guard.rs  lib.rs  policy.rs  verdict.rs
crates/aarambh-ai-safety/src/input/: injection.rs  jailbreak.rs  mod.rs  pii.rs
crates/aarambh-ai-safety/src/output/: audit.rs  mod.rs  pii_redact.rs  toxicity.rs
crates/aarambh-ai-selflearn/: Cargo.toml
crates/aarambh-ai-selflearn/src/: config.rs  critique.rs  learning_loop.rs  lib.rs  metrics.rs  online_grpo.rs  replay.rs
crates/aarambh-ai-tokenizer/: Cargo.toml
crates/aarambh-ai-tokenizer/src/: bpe.rs  lib.rs  special.rs  vocab.rs
crates/aarambh-ai-tokenizer/tests/: tokenizer_tests.rs
crates/aarambh-ai-train/: Cargo.toml
crates/aarambh-ai-train/src/: checkpoint.rs  config.rs  lib.rs  loss.rs  optim.rs  schedule.rs  trainer.rs
crates/aarambh-ai-weights/: Cargo.toml
crates/aarambh-ai-weights/src/: convert.rs  gguf.rs  lib.rs
crates/aarambh-ai-weights/tests/: weights_tests.rs
data/: grpo_tiny_math.jsonl
notebooks/: phase13_large_train.ipynb  phase13_medium_train.ipynb  phase13_small_train.ipynb
scripts/: phase13_pack_checkpoint.sh  phase13_prepare_wikitext103.sh
