[package]
name = "aarambh-ai-data"
version = "1.0.0"
publish = false
edition = "2024"

[features]
default = []
cuda = ["aarambh-ai-core/cuda", "candle-core/cuda"]

[dependencies]
aarambh-ai-core = { path = "../aarambh-ai-core" }
candle-core      = { workspace = true }
rand             = "0.8"
serde_json       = { workspace = true }
serde            = { workspace = true }
