[package]
name = "aarambh-ai-finetune"
version = "1.0.0"
publish = false
edition = "2024"

[features]
default = []
cuda = [
    "aarambh-ai-core/cuda",
    "aarambh-ai-kernel/cuda",
    "aarambh-ai-model/cuda",
    "aarambh-ai-nn/cuda",
    "aarambh-ai-quant/cuda",
    "aarambh-ai-train/cuda",
    "aarambh-ai-weights/cuda",
    "candle-core/cuda",
    "candle-nn/cuda",
]

[dependencies]
aarambh-ai-core      = { path = "../aarambh-ai-core" }
aarambh-ai-kernel    = { path = "../aarambh-ai-kernel" }
aarambh-ai-model     = { path = "../aarambh-ai-model" }
aarambh-ai-nn        = { path = "../aarambh-ai-nn" }
aarambh-ai-quant     = { path = "../aarambh-ai-quant" }
aarambh-ai-tokenizer = { path = "../aarambh-ai-tokenizer" }
aarambh-ai-train     = { path = "../aarambh-ai-train" }
aarambh-ai-weights   = { path = "../aarambh-ai-weights" }
candle-core          = { workspace = true }
candle-nn            = { workspace = true }
rand                 = "0.8"
serde                = { workspace = true }
serde_json           = { workspace = true }
