[package]
name = "aarambh-ai-inference"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = [
    "aarambh-ai-core/cuda",
    "aarambh-ai-model/cuda",
    "aarambh-ai-nn/cuda",
    "aarambh-ai-weights/cuda",
    "candle-core/cuda",
    "candle-nn/cuda",
]

[dependencies]
aarambh-ai-core      = { path = "../aarambh-ai-core" }
aarambh-ai-model     = { path = "../aarambh-ai-model" }
aarambh-ai-nn        = { path = "../aarambh-ai-nn" }
aarambh-ai-tokenizer = { path = "../aarambh-ai-tokenizer" }
aarambh-ai-weights   = { path = "../aarambh-ai-weights" }
candle-core          = { workspace = true }
candle-nn            = { workspace = true }
rand                 = "0.8"
