[package]
name = "aarambh-ai-kernel"
version = "1.0.0"
publish = false
edition = "2024"
build = "build.rs"

[features]
default = []
cuda = ["aarambh-ai-core/cuda", "candle-core/cuda", "candle-nn/cuda"]

[dependencies]
aarambh-ai-core = { path = "../aarambh-ai-core" }
candle-core     = { workspace = true }
candle-nn       = { workspace = true }
half            = { workspace = true }
rayon           = { workspace = true }

[build-dependencies]
cc    = { workspace = true }
which = { workspace = true }

[dev-dependencies]
criterion   = { workspace = true }
candle-core = { workspace = true }
candle-nn   = { workspace = true }

[[bench]]
name = "kernel_bench"
harness = false
