[package]
name = "aarambh-ai-model"
version = "1.0.0"
publish = false
edition = "2024"

[features]
default = []
cuda = [
    "aarambh-ai-core/cuda",
    "aarambh-ai-nn/cuda",
    "candle-core/cuda",
    "candle-nn/cuda",
]

[dependencies]
aarambh-ai-core = { path = "../aarambh-ai-core" }
aarambh-ai-nn   = { path = "../aarambh-ai-nn" }
candle-core     = { workspace = true }
candle-nn       = { workspace = true }
