[package]
name = "aarambh-ai-nn"
version = "1.0.0"
publish = false
edition = "2024"

[features]
default = []
cuda = [
    "aarambh-ai-core/cuda",
    "aarambh-ai-kernel/cuda",
    "candle-core/cuda",
    "candle-nn/cuda",
]

[dependencies]
aarambh-ai-core = { path = "../aarambh-ai-core" }
aarambh-ai-kernel = { path = "../aarambh-ai-kernel" }
candle-core      = { workspace = true }
candle-nn        = { workspace = true }

[dev-dependencies]
aarambh-ai-core = { path = "../aarambh-ai-core" }
candle-core      = { workspace = true }
candle-nn        = { workspace = true }
