[package]
name = "aarambh-ai-quant"
version = "1.0.0"
publish = false
edition = "2024"

[features]
default = []
cuda = [
    "aarambh-ai-core/cuda",
    "aarambh-ai-data/cuda",
    "aarambh-ai-model/cuda",
    "candle-core/cuda",
]

[dependencies]
aarambh-ai-core      = { path = "../aarambh-ai-core" }
aarambh-ai-data      = { path = "../aarambh-ai-data" }
aarambh-ai-model     = { path = "../aarambh-ai-model" }
candle-core          = { workspace = true }
serde                = { workspace = true }
