[package]
name = "aarambh-ai-safety"
version = "1.0.0"
publish = false
edition = "2024"

[features]
default = []
cuda = ["aarambh-ai-core/cuda", "aarambh-ai-inference/cuda"]

[dependencies]
aarambh-ai-core      = { path = "../aarambh-ai-core" }
aarambh-ai-inference = { path = "../aarambh-ai-inference" }
serde                = { workspace = true }
serde_json           = { workspace = true }
sha2                 = { workspace = true }
