[package]
name = "aarambh-ai-selflearn"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = [
    "aarambh-ai-core/cuda",
    "aarambh-ai-finetune/cuda",
    "aarambh-ai-inference/cuda",
    "aarambh-ai-model/cuda",
    "aarambh-ai-train/cuda",
    "aarambh-ai-weights/cuda",
    "candle-core/cuda",
    "candle-nn/cuda",
]

[dependencies]
aarambh-ai-core      = { path = "../aarambh-ai-core" }
aarambh-ai-finetune  = { path = "../aarambh-ai-finetune" }
aarambh-ai-inference = { path = "../aarambh-ai-inference" }
aarambh-ai-model     = { path = "../aarambh-ai-model" }
aarambh-ai-tokenizer = { path = "../aarambh-ai-tokenizer" }
aarambh-ai-train     = { path = "../aarambh-ai-train" }
aarambh-ai-weights   = { path = "../aarambh-ai-weights" }
candle-core          = { workspace = true }
candle-nn            = { workspace = true }
rand                 = "0.8"
serde                = { workspace = true }
serde_json           = { workspace = true }
